@@ -294,7 +294,7 @@ bzr-orphans
 			pathlister:   "hg status -macn",
 			taglister:    "hg tags --quiet",
 			branchlister: "hg branches --closed --template '{branch}\n' | grep -v '^default$'",
-			importer:     "hg-git-fast-import",
+			importer:     "hg-git-fast-import .",
 			checkout:     "hg checkout",
 			gui:          "TZ=UTC hgk",
 			prenuke:      newOrderedStringSet(".hg/hgrc"),
@@ -314,7 +314,7 @@ branch is renamed to 'master'.
 			name:         "darcs",
 			subdirectory: "_darcs",
 			requires:     newStringSet("darcs"),
-			exporter:     "darcs fastconvert export",
+			exporter:     "darcs convert export 2>/dev/null",
 			quieter:      "",
 			styleflags:   newOrderedStringSet(),
 			extensions:   newOrderedStringSet(),
@@ -322,7 +322,7 @@ branch is renamed to 'master'.
 			pathlister:   "darcs show files",
 			taglister:    "darcs show tags",
 			branchlister: "",
-			importer:     "darcs fastconvert import",
+			importer:     "darcs convert import --quiet >/dev/null",
 			checkout:     "",
 			gui:          "",
 			prenuke:      newOrderedStringSet(),
